<resources>
    <string name="app_name">Speedway app</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="home">Home</string>
    <string name="select_first_team">Select first team</string>
    <string name="start_match">Start match</string>
    <string name="select_second_team">Select second team</string>
    <string name="first_team">First team</string>
    <string name="second_team">Second team</string>
</resources>
