<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.quotes.MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/actionHome"
            android:icon="@drawable/ic_home_black_24dp"
            android:orderInCategory="100"
            android:title="@string/home"
            app:showAsAction="never" />

        <item
            android:id="@+id/actionFirstTeam"
            android:icon="@drawable/ic_people_black_24dp"
            android:orderInCategory="100"
            android:title="@string/first_team"
            app:showAsAction="never" />
        <item
            android:id="@+id/actionSecondTeam"
            android:icon="@drawable/ic_people_black_24dp"
            android:orderInCategory="100"
            android:title="@string/second_team"
            app:showAsAction="never" />

    </group>
</menu>
