<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonfirstteam"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/select_first_team"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonsecondteam"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/select_second_team"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonfirstteam" />

    <Button
        android:id="@+id/buttonmatch"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/start_match"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonsecondteam" />

    <TextView
        android:id="@+id/ilosc"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="probaaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonmatch" />
</androidx.constraintlayout.widget.ConstraintLayout>